--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	  About
 	</div>
       </div>
-      <div class"row heading">
+      <div class="row heading">
 	<div class="span12">
 	  <h1>Bitstarter Title</h1>
 	</div>
