--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         font-size: 24px;
         line-height: 30px;
       }
+      p {
+        font-size: 18px;
+        line-height: 24px;
+      }
+      
       .navigation, .pitch, .section1, .section2, .faq, .footer {
         padding: 10px 0px 10px 0px;
       }
@@ -79,32 +84,30 @@
       </div>
     </div>
 
+    <!-- We use row-fluid inside containers to achieve a resizable layout. -->
+    <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
+    <!-- http://stackoverflow.com/a/12270322 -->
     <div class="container">
-      <div class="row navigation">
-	<div class="span2 logo">
-	  Logo
-	</div>
-	<div class="span6 blank">
-	  Blank
-	</div>
-	<div class="span4 about">
-	  About
-	</div>
-      </div>
-      <div class="row heading">
+      <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
+      <!-- www.google.com/fonts/specimen/Ubuntu -->
+      <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
+      <div class="row-fluid subheading">
 	<div class="span12">
-	  <h1>Bitstarter Title</h1>
+	  <h1>Product</h1>
 	</div>
       </div>
-      <div class="row subheading">
+      <div class="row-fluid subheading">
 	<div class="span12">
-	  <p class="lead">This is my first bitstarter project.</p>
+	  <!-- Special typography from Bootstrap for lead paragraph. -->
+	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
+	  <p class="lead">One sentence description.</p>
 	</div>
       </div>
-      <div class="row pitch">
-	<div class="span6 video">
-	  Video
+      <div class="row-fluid pitch">
+	<div class="span5 offset1 video">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
+	
 	<div class="span6">
 	  <div class="thermometer">
 	    Thermometer
