--- a/index.html
+++ b/index.html
@@ -36,26 +36,23 @@
         font-size: 18px;
         line-height: 24px;
       }
-      
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-        padding: 10px 0px 10px 0px;
+
+      /* Video pitch and Action */
+      .pitch {
+        padding: 2.5% 0%;
       }
-      .video, .thermometer, .order, .social {
-        border: 1px dotted;
+      .order {
+       padding: 2% 0%;
+      }
+      .actions {
+        background-color: #343434;
+        padding: 3% 0%;
+      }
+      .video, .thermometer, .order, .social, .statistics {
         text-align: center;
       }
-      .video {
-        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-        height: 124px;
-        line-height: 124px;
-      }
-      .thermometer, .order, .social {
-        /* line-height to verically center: http://phrogz.net/css/vertical-align/index.html */
-        height: 40px;
-        line-height: 40px;
-      }
-      div.row {
-        border: 1px solid;
+      .statistics h3, .statistics p {
+        color: white;
       }
     </style>
   </head>    
@@ -107,39 +104,43 @@
 	<div class="span5 offset1 video">
 	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
-	
-	<div class="span6">
-	  <div class="thermometer">
-	    Thermometer
+
+	<!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
+	<div class="span5 actions">
+	  <div class="span8 offset2">
+	    <div class="statistics">
+	      <div class="span4">
+		<!-- linediv-l and linediv-r give dividing lines that look
+		     different in horizontal and vertical layouts, illustrating
+		     media queries. -->
+		<div class="linediv-l">
+		  <h3>1000</h3> <p>backers</p>
+		</div>
+	      </div>
+	      <div class="span4">
+		<div class="linediv-c">
+		  <h3>$6000</h3> <p>of $10,000</p>
+		</div>
+	      </div>
+	      <div class="span4">
+		<div class="linediv-r">
+		  <h3>10</h3> <p>days left</p>
+		</div>
+	      </div>
+	    </div>
 	  </div>
-	  <div class="order">
-	    Order
+	  <div class="span10 offset1">
+	    <!-- Bootstrap progress bar -->
+	    <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+	    <div class="thermometer progress active">
+	      <div class="bar bar-success" style="width: 60%;"></div>
+	      <div class="bar bar-warning" style="width: 40%;"></div>
+	    </div>
 	  </div>
-	  <div class="social">
-	    Social
-	  </div>
-	</div>
-      </div>
-      <div class="row section1">
-	<div class="span12">
-	  Marketing Section 1
-	</div>
-      </div>
-      <div class="row section2">
-	<div class="span12">
-	  Marketing Section 2
-	</div>
-      </div>
-      <div class="row faq">
-	<div class="span12">
-	  FAQ
-	</div>
-      </div>
-      <div class="row footer">
-	<div class="span12">
-	  Footer
-	</div>
-      </div>
+
+
+	</div> <!-- closing tag for "span5 actions" -->
+
     </div>
   </body>
 </html>
