--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
       .statistics h3, .statistics p {
         color: white;
       }
+
+      /* Marketing Copy */
+      .copy {
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        text-align: justify;
+      }
+      .asset {
+        padding: 2.5% 0%;
+       }
     </style>
   </head>    
   <body>
@@ -92,7 +102,7 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid subheading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>Amazing Game</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
@@ -153,8 +163,32 @@
 	</div>
       </div>
 
-	</div> <!-- closing tag for "span5 actions"...maybe -->
+      <!-- Beyond this part the marketing copy begins. -->
+      <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+      <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
+      <!-- http://placehold.it -->
+      <div class="row-fluid section1">
+	<div class="span5 offset1 asset">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>
+	<div class="span5 copy">
+	  <p>
+	    Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.
+	  </p>
+	</div>
+      </div>
 
+      <div class="row-fluid section2">
+	<div class="span5 offset1 copy copy-right">
+	  <p>
+	    Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.
+	  </p>
+	</div>
+	<div class="span5 asset">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>
+      </div>
+	   
     </div>
   </body>
 </html>
