Finished off skeleton with some license info in the footer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         color: white;
       }
 
-      /* Marketing Copy */
+      /* Marketing Copy and Footer */
       .copy {
         padding-top: 2.5%;
         padding-bottom: 2.5%;
@@ -66,6 +66,16 @@
       .asset {
         padding: 2.5% 0%;
        }
+      .footer {
+        color: #cccccc;
+        text-align: center;
+      }
+      .footer p {
+        font-size: 11px;
+      }
+      .footer a {
+        color: #ccccff;
+      }
     </style>
   </head>    
   <body>
@@ -201,8 +211,8 @@
 		<a class="accordion-toggle" data-toggle="collapse"
 		   data-parent="#accordion2" href="#collapseOne">
 		  What does FAQ stand for?
-		  </a>
-		</div>
+		</a>
+	      </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
 		  Frequently Asked Question.
@@ -213,20 +223,30 @@
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse"
 		   data-parent="#accordion2" href="#collapseTwo">
-		  Whats' a Frequently Asked Question?
+		  What's a Frequently Asked Question?
 		</a>
 	      </div>
 	      <div id="collapseTwo" class="accordion-body collapse">
 		<div class="accordion-inner">
 		  A question which is commonly asked by users.
-		  </div>
 		</div>
 	      </div>
 	    </div>
 	  </div>
-
 	</div>
-	   
+
+      </div>
+      <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
+      <!-- http://creativecommons.org/licenses/ -->
+      <div class="row-fluid footer">
+	<div class="span12">
+	  <p>This work is licensed under
+	    the <a href="http://creativecommons.org/licenses/by-sa/3.0">CC
+	      By-SA 3.0
+	    </a>, without all the cruft that would otherwise be
+	    put at the bottom of the page.</p>
+	</div>
+      </div>
     </div>
   </body>
 </html>
@@ -234,4 +254,4 @@
 
 
 
-       
+
