Dummified index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
         body {
         padding-top: 60px;
       }
+      .linediv-l {
+        border-right: 1px white solid;
+      }
+      .linediv-r {
+        border-left: 1px white solid;
+      }
+      }
+
+      /* Landscape phones and down */
+      @media (max-width: 480px) {
+      .copy {
+        padding: 2.5% 10%;
+      }
+      .linediv-l {
+        border-bottom: 1px white solid;
+      }
+      .linediv-r {
+        border-top: 1px white solid;
+      }
+      }
 
       /* All form factors */
 
@@ -112,14 +132,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid subheading">
 	<div class="span12">
-	  <h1>Amazing Game</h1>
+	  <h1>The Dummifier</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
 	  <!-- Special typography from Bootstrap for lead paragraph. -->
 	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-	  <p class="lead">One sentence description.</p>
+	  <p class="lead">An efficient way to be a dummy.</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
@@ -136,17 +156,17 @@
 		     different in horizontal and vertical layouts, illustrating
 		     media queries. -->
 		<div class="linediv-l">
-		  <h3>1000</h3> <p>backers</p>
+		  <h3>117</h3> <p>backers</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
+		  <h3>$60</h3> <p>of $100</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
+		  <h3>0</h3> <p>days left</p>
 		</div>
 	      </div>
 	    </div>
@@ -183,7 +203,12 @@
 	</div>
 	<div class="span5 copy">
 	  <p>
-	    Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.
+	    With the advent of schools and universities, everyone is in a rush to get
+	    smarter. People are rushing to get better jobs, better pay, and less down-time -
+	    but what about those left behind? The silent minority of idiots have been
+	    reading books on "xx for Dummies", but have never gone beyond reading. Thanks
+	    to the Dummifier, more people can learn just how to be a dummy in as short
+	    a time as possible, allowing YOU to be the dummy.
 	  </p>
 	</div>
       </div>
@@ -191,7 +216,11 @@
       <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
 	  <p>
-	    Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.Lorem ipsum dolor sit amet, and more things here.
+	    We need your help to build the Dummifier. At present it's only a concept,
+	    but we hope to bring the Dummifier to the market some time in early 2014 -
+	    no matter the cost. All we need is a starting capital of $100 to start the
+	    dummification process to get the team into the right frame of mind. If
+	    successful, we will reward all backers with a FREE dummy email. 
 	  </p>
 	</div>
 	<div class="span5 asset">
@@ -215,7 +244,8 @@
 	      </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Frequently Asked Question.
+		  Nobody knows.
+		  If you already knew the answer, the Dummifier is for you!
 		</div>
 	      </div>
 	    </div>
@@ -228,7 +258,7 @@
 	      </div>
 	      <div id="collapseTwo" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  A question which is commonly asked by users.
+		  Again, nobody knows.
 		</div>
 	      </div>
 	    </div>
