--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 	<div class="span12">
 	  <!-- Special typography from Bootstrap for lead paragraph. -->
 	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-	  <p class="lead">An efficient way to be a dummy.</p>
+	  <p class="lead">An efficient way to create dummies.</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
