--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 	      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 		<a class="addthis_button_preferred_1"></a>
 		<a class="addthis_button_preferred_2"></a>
+		<a class="addthis_button_preferred_4"></a>
 		</a class="addthis_button_compact"></a>
 		<a class="addthis_counter addthis_bubble_style"></a>
 	      </div>
@@ -206,8 +207,8 @@
 	      <!-- AddThis Button END -->
 	      <!-- Social buttons are not included in default Bootstrap. -->
 	      <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-	      <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+<!--	      <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+	      <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button> -->
 	    </div>
 	  </div>
 	</div>
