--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
 	  </div>
 	  <div class="row-fluid">
 	    <div class="span8 offset2 social">
+	      <a class="coinbase-button" data-code="ae3a3d8173349af747751dee3310aff1" data-button-style="custom_small" href="https://coinbase.com/checkouts/ae3a3d8173349af747751dee3310aff1">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	      <!-- AddThis Button BEGIN -->
 	      <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 		<a class="addthis_button_preferred_1"></a>
