--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
 		</div>
 	      </div>
 	    </div>
+	    <div class="row-fluid">
 	    <div class="span10 offset1">
 	      <!-- Bootstrap progress bar -->
 	      <!-- http://twitter.github.io/bootstrap/components.html#progress -->
